PL-pgSQL/src/main/java/org/jbrod/grammars/SQLParser.java
// Generated from /home/jorge/Compi_2/PL-pgSQL/PL-pgSQL/src/gramaticas/SQL.g4 by ANTLR 4.13.2
package org.jbrod.grammars;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class SQLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		CREATE=1, SCHEMA=2, USE=3, TABLE=4, ALTER=5, ADD=6, COLUMN=7, DROP=8, 
		CONSTRAINT=9, FOREIGN=10, PRIMARY=11, KEY=12, REFERENCES=13, INTEGER=14, 
		VARCHAR=15, BOOLEAN=16, INSERT=17, INTO=18, VALUES=19, UPDATE=20, SET=21, 
		WHERE=22, DELETE=23, FROM=24, SELECT=25, JOIN=26, LEFT_JOIN=27, ON=28, 
		USER=29, GRANT=30, TO=31, REVOKE=32, NOT=33, NULL=34, EQUALS=35, DOT=36, 
		COMMA=37, LPAREN=38, RPAREN=39, SEMICOLON=40, ALL_SYM=41, TRUE=42, FALSE=43, 
		STRING=44, IDENTIFICADOR=45, NUMERO=46, WS=47, COMENTARIO=48;
	public static final int
		RULE_sql_script = 0, RULE_valor_op = 1, RULE_valores = 2, RULE_opciones = 3, 
		RULE_ddl_sentence = 4, RULE_create_schema = 5, RULE_use_schema = 6, RULE_tipo_dato = 7, 
		RULE_restriccion_columna = 8, RULE_columna = 9, RULE_llave_foranea = 10, 
		RULE_elemento_tabla = 11, RULE_lista_elementos = 12, RULE_create_table = 13, 
		RULE_alter_add_column = 14, RULE_alter_drop_column = 15, RULE_alter_add_constraint = 16, 
		RULE_alter_drop_constraint = 17, RULE_drop_table = 18, RULE_dml_sentence = 19, 
		RULE_insert_into = 20, RULE_asignaciones = 21, RULE_update_sentence = 22, 
		RULE_delete_sentence = 23, RULE_columna_prefijo = 24, RULE_columnas = 25, 
		RULE_join_type = 26, RULE_join_clause = 27, RULE_join_list = 28, RULE_select_sentence = 29, 
		RULE_dcl_sentence = 30, RULE_permiso = 31, RULE_tabla_op = 32, RULE_create_user = 33, 
		RULE_grant_perm = 34, RULE_revoke_perm = 35;
	private static String[] makeRuleNames() {
		return new String[] {
			"sql_script", "valor_op", "valores", "opciones", "ddl_sentence", "create_schema", 
			"use_schema", "tipo_dato", "restriccion_columna", "columna", "llave_foranea", 
			"elemento_tabla", "lista_elementos", "create_table", "alter_add_column", 
			"alter_drop_column", "alter_add_constraint", "alter_drop_constraint", 
			"drop_table", "dml_sentence", "insert_into", "asignaciones", "update_sentence", 
			"delete_sentence", "columna_prefijo", "columnas", "join_type", "join_clause", 
			"join_list", "select_sentence", "dcl_sentence", "permiso", "tabla_op", 
			"create_user", "grant_perm", "revoke_perm"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'CREATE'", "'SCHEMA'", "'USE'", "'TABLE'", "'ALTER'", "'ADD'", 
			"'COLUMN'", "'DROP'", "'CONSTRAINT'", "'FOREIGN'", "'PRIMARY'", "'KEY'", 
			"'REFERENCES'", "'INTEGER'", "'VARCHAR'", "'BOOLEAN'", "'INSERT'", "'INTO'", 
			"'VALUES'", "'UPDATE'", "'SET'", "'WHERE'", "'DELETE'", "'FROM'", "'SELECT'", 
			"'JOIN'", "'LEFT JOIN'", "'ON'", "'USER'", "'GRANT'", "'TO'", "'REVOKE'", 
			"'NOT'", "'NULL'", "'='", "'.'", "','", "'('", "')'", "';'", "'*'", "'true'", 
			"'false'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "CREATE", "SCHEMA", "USE", "TABLE", "ALTER", "ADD", "COLUMN", "DROP", 
			"CONSTRAINT", "FOREIGN", "PRIMARY", "KEY", "REFERENCES", "INTEGER", "VARCHAR", 
			"BOOLEAN", "INSERT", "INTO", "VALUES", "UPDATE", "SET", "WHERE", "DELETE", 
			"FROM", "SELECT", "JOIN", "LEFT_JOIN", "ON", "USER", "GRANT", "TO", "REVOKE", 
			"NOT", "NULL", "EQUALS", "DOT", "COMMA", "LPAREN", "RPAREN", "SEMICOLON", 
			"ALL_SYM", "TRUE", "FALSE", "STRING", "IDENTIFICADOR", "NUMERO", "WS", 
			"COMENTARIO"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SQL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SQLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Sql_scriptContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(SQLParser.EOF, 0); }
		public List<Dcl_sentenceContext> dcl_sentence() {
			return getRuleContexts(Dcl_sentenceContext.class);
		}
		public Dcl_sentenceContext dcl_sentence(int i) {
			return getRuleContext(Dcl_sentenceContext.class,i);
		}
		public List<Dml_sentenceContext> dml_sentence() {
			return getRuleContexts(Dml_sentenceContext.class);
		}
		public Dml_sentenceContext dml_sentence(int i) {
			return getRuleContext(Dml_sentenceContext.class,i);
		}
		public List<Ddl_sentenceContext> ddl_sentence() {
			return getRuleContexts(Ddl_sentenceContext.class);
		}
		public Ddl_sentenceContext ddl_sentence(int i) {
			return getRuleContext(Ddl_sentenceContext.class,i);
		}
		public Sql_scriptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sql_script; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLListener ) ((SQLListener)listener).enterSql_script(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLListener ) ((SQLListener)listener).exitSql_script(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLVisitor ) return ((SQLVisitor<? extends T>)visitor).visitSql_script(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Sql_scriptContext sql_script() throws RecognitionException {
		Sql_scriptContext _localctx = new Sql_scriptContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_sql_script);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 5411832106L) != 0)) {
				{
				setState(75);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(72);
					dcl_sentence();
					}
					break;
				case 2:
					{
					setState(73);
					dml_sentence();
					}
					break;
				case 3:
					{
					setState(74);
					ddl_sentence();
					}
					break;
				}
				}
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(80);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Valor_opContext extends ParserRuleContext {
		public TerminalNode NUMERO() { return getToken(SQLParser.NUMERO, 0); }
		public TerminalNode TRUE() { return getToken(SQLParser.TRUE, 0); }
		public TerminalNode FALSE() { return getToken(SQLParser.FALSE, 0); }
		public TerminalNode STRING() { return getToken(SQLParser.STRING, 0); }
		public Valor_opContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_valor_op; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLListener ) ((SQLListener)listener).enterValor_op(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLListener ) ((SQLListener)listener).exitValor_op(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLVisitor ) return ((SQLVisitor<? extends T>)visitor).visitValor_op(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Valor_opContext valor_op() throws RecognitionException {
		Valor_opContext _localctx = new Valor_opContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_valor_op);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 101155069755392L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ValoresContext extends ParserRuleContext {
		public List<Valor_opContext> valor_op() {
			return getRuleContexts(Valor_opContext.class);
		}
		public Valor_opContext valor_op(int i) {
			return getRuleContext(Valor_opContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(SQLParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(SQLParser.COMMA, i);
		}
		public ValoresContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_valores; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLListener ) ((SQLListener)listener).enterValores(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLListener ) ((SQLListener)listener).exitValores(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLVisitor ) return ((SQLVisitor<? extends T>)visitor).visitValores(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ValoresContext valores() throws RecognitionException {
		ValoresContext _localctx = new ValoresContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_valores);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			valor_op();
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(85);
				match(COMMA);
				setState(86);
				valor_op();
				}
				}
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OpcionesContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFICADOR() { return getTokens(SQLParser.IDENTIFICADOR); }
		public TerminalNode IDENTIFICADOR(int i) {
			return getToken(SQLParser.IDENTIFICADOR, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(SQLParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(SQLParser.COMMA, i);
		}
		public OpcionesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_opciones; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLListener ) ((SQLListener)listener).enterOpciones(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLListener ) ((SQLListener)listener).exitOpciones(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLVisitor ) return ((SQLVisitor<? extends T>)visitor).visitOpciones(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OpcionesContext opciones() throws RecognitionException {
		OpcionesContext _localctx = new OpcionesContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_opciones);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(IDENTIFICADOR);
			setState(97);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(93);
				match(COMMA);
				setState(94);
				match(IDENTIFICADOR);
				}
				}
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Ddl_sentenceContext extends ParserRuleContext {
		public Create_schemaContext create_schema() {
			return getRuleContext(Create_schemaContext.class,0);
		}
		public Use_schemaContext use_schema() {
			return getRuleContext(Use_schemaContext.class,0);
		}
		public Create_tableContext create_table() {
			return getRuleContext(Create_tableContext.class,0);
		}
		public Alter_add_columnContext alter_add_column() {
			return getRuleContext(Alter_add_columnContext.class,0);
		}
		public Alter_drop_columnContext alter_drop_column() {
			return getRuleContext(Alter_drop_columnContext.class,0);
		}
		public Drop_tableContext drop_table() {
			return getRuleContext(Drop_tableContext.class,0);
		}
		public Alter_add_constraintContext alter_add_constraint() {
			return getRuleContext(Alter_add_constraintContext.class,0);
		}
		public Alter_drop_constraintContext alter_drop_constraint() {
			return getRuleContext(Alter_drop_constraintContext.class,0);
		}
		public Ddl_sentenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ddl_sentence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLListener ) ((SQLListener)listener).enterDdl_sentence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLListener ) ((SQLListener)listener).exitDdl_sentence(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLVisitor ) return ((SQLVisitor<? extends T>)visitor).visitDdl_sentence(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Ddl_sentenceContext ddl_sentence() throws RecognitionException {
		Ddl_sentenceContext _localctx = new Ddl_sentenceContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_ddl_sentence);
		try {
			setState(108);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(100);
				create_schema();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(101);
				use_schema();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(102);
				create_table();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(103);
				alter_add_column();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(104);
				alter_drop_column();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(105);
				drop_table();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(106);
				alter_add_constraint();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(107);
				alter_drop_constraint();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Create_schemaContext extends ParserRuleContext {
		public Create_schemaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_create_schema; }
	 
		public Create_schemaContext() { }
		public void copyFrom(Create_schemaContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PRUEBAContext extends Create_schemaContext {
		public Token id;
		public TerminalNode CREATE() { return getToken(SQLParser.CREATE, 0); }
		public TerminalNode SCHEMA() { return getToken(SQLParser.SCHEMA, 0); }
		public TerminalNode SEMICOLON() { return getToken(SQLParser.SEMICOLON, 0); }
		public TerminalNode IDENTIFICADOR() { return getToken(SQLParser.IDENTIFICADOR, 0); }
		public PRUEBAContext(Create_schemaContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLListener ) ((SQLListener)listener).enterPRUEBA(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLListener ) ((SQLListener)listener).exitPRUEBA(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLVisitor ) return ((SQLVisitor<? extends T>)visitor).visitPRUEBA(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Create_schemaContext create_schema() throws RecognitionException {
		Create_schemaContext _localctx = new Create_schemaContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_create_schema);
		try {
			_localctx = new PRUEBAContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(CREATE);
			setState(111);
			match(SCHEMA);
			setState(112);
			((PRUEBAContext)_localctx).id = match(IDENTIFICADOR);
			setState(113);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Use_schemaContext extends ParserRuleContext {
		public TerminalNode USE() { return getToken(SQLParser.USE, 0); }
		public TerminalNode SCHEMA() { return getToken(SQLParser.SCHEMA, 0); }
		public TerminalNode IDENTIFICADOR() { return getToken(SQLParser.IDENTIFICADOR, 0); }
		public TerminalNode SEMICOLON() { return getToken(SQLParser.SEMICOLON, 0); }
		public Use_schemaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_use_schema; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLListener ) ((SQLListener)listener).enterUse_schema(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLListener ) ((SQLListener)listener).exitUse_schema(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLVisitor ) return ((SQLVisitor<? extends T>)visitor).visitUse_schema(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Use_schemaContext use_schema() throws RecognitionException {
		Use_schemaContext _localctx = new Use_schemaContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_use_schema);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(USE);
			setState(116);
			match(SCHEMA);
			setState(117);
			match(IDENTIFICADOR);
			setState(118);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Tipo_datoContext extends ParserRuleContext {
		public TerminalNode INTEGER() { return getToken(SQLParser.INTEGER, 0); }
		public TerminalNode VARCHAR() { return getToken(SQLParser.VARCHAR, 0); }
		public TerminalNode LPAREN() { return getToken(SQLParser.LPAREN, 0); }
		public TerminalNode NUMERO() { return getToken(SQLParser.NUMERO, 0); }
		public TerminalNode RPAREN() { return getToken(SQLParser.RPAREN, 0); }
		public TerminalNode BOOLEAN() { return getToken(SQLParser.BOOLEAN, 0); }
		public Tipo_datoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo_dato; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLListener ) ((SQLListener)listener).enterTipo_dato(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLListener ) ((SQLListener)listener).exitTipo_dato(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLVisitor ) return ((SQLVisitor<? extends T>)visitor).visitTipo_dato(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Tipo_datoContext tipo_dato() throws RecognitionException {
		Tipo_datoContext _localctx = new Tipo_datoContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_tipo_dato);
		try {
			setState(126);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INTEGER:
				enterOuterAlt(_localctx, 1);
				{
				setState(120);
				match(INTEGER);
				}
				break;
			case VARCHAR:
				enterOuterAlt(_localctx, 2);
				{
				setState(121);
				match(VARCHAR);
				setState(122);
				match(LPAREN);
				setState(123);
				match(NUMERO);
				setState(124);
				match(RPAREN);
				}
				break;
			case BOOLEAN:
				enterOuterAlt(_localctx, 3);
				{
				setState(125);
				match(BOOLEAN);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Restriccion_columnaContext extends ParserRuleContext {
		public TerminalNode PRIMARY() { return getToken(SQLParser.PRIMARY, 0); }
		public TerminalNode KEY() { return getToken(SQLParser.KEY, 0); }
		public TerminalNode NOT() { return getToken(SQLParser.NOT, 0); }
		public TerminalNode NULL() { return getToken(SQLParser.NULL, 0); }
		public Restriccion_columnaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_restriccion_columna; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLListener ) ((SQLListener)listener).enterRestriccion_columna(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLListener ) ((SQLListener)listener).exitRestriccion_columna(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLVisitor ) return ((SQLVisitor<? extends T>)visitor).visitRestriccion_columna(this);
			else return visitor.visitChildren(this);
		}
	}
